--- a/src/styles/Loading.css
+++ b/src/styles/Loading.css
@@ -3,17 +3,41 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    width: 119px;
-    height: 92px;
     color: white;
 }
 .GifContainer{
-    width: 52px;
-    height: 52.86px;
     background-image: url("../assets/gifs/pacman.gif");
 }
 .Loading{
     display: inline-block;
-    font-size: 24px;
     font-weight: 500;
+}
+
+@media (min-width: 320px){
+    .ContentLoading{
+        width: 119px;
+        height: 92px;
+    }
+    .GifContainer{
+        width: 50px;
+        height: 50px;
+    }
+    .Loading{
+        font-size: 24px;
+    }
+}
+
+@media (min-width: 1210px){
+    .ContentLoading{
+        width: 182px;
+        height: 137px;
+    }
+    .GifContainer{
+        width: 70px;
+        height: 70px;
+    }
+    .Loading{
+        font-weight: bold;
+        font-size: 36px;
+    }
 }
