A <a> tag was added to the buttons in the FullscreenMode page to move to the other page. Along with some changes in the css

--- a/src/styles/FullscreenMode.css
+++ b/src/styles/FullscreenMode.css
@@ -14,8 +14,11 @@
 .ContentFullscreenMode button{
     width: 100%;
     border-radius: 15px;
-    color: white;
     font-weight: bold;
+}
+.ContentFullscreenMode button a{
+    color: white;
+    text-decoration: none;
 }
 .FullscreenButton{
     border-color: var(--borderColor);
