Pacman image was added to the Playing page

--- a/src/styles/Playing.css
+++ b/src/styles/Playing.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    color: white;
 }
 .GameBoard{
     border: 4px solid var(--borderColor);
