--- a/src/styles/designs/desktop.css
+++ b/src/styles/designs/desktop.css
@@ -1,11 +1,11 @@
 /* downLeft */
-.GameBoard section:nth-child(1) div:nth-child(14), .GameBoard section:nth-child(7) div:nth-child(14), .GameBoard section:nth-child(7) div:nth-child(2), .GameBoard section:nth-child(7) div:nth-child(12), .GameBoard section:nth-child(7) div:nth-child(21), .GameBoard section:nth-child(11) div:nth-child(2), .GameBoard section:nth-child(11) div:nth-child(7), .GameBoard section:nth-child(12) div:nth-child(21), .GameBoard section:nth-child(14) div:nth-child(27), .GameBoard section:nth-child(15) div:nth-child(12), .GameBoard section:nth-child(14) div:nth-child(7){
+.GameBoard section:nth-child(1) div:nth-child(14), .GameBoard section:nth-child(7) div:nth-child(2), .GameBoard section:nth-child(7) div:nth-child(12), .GameBoard section:nth-child(7) div:nth-child(21), .GameBoard section:nth-child(11) div:nth-child(2), .GameBoard section:nth-child(11) div:nth-child(7), .GameBoard section:nth-child(12) div:nth-child(21), .GameBoard section:nth-child(14) div:nth-child(27), .GameBoard section:nth-child(15) div:nth-child(12), .GameBoard section:nth-child(14) div:nth-child(7){
     border-left: var(--border);
     border-bottom: var(--border);
     border-radius: var(--downLeft);
 }
 /* downRight */
-.GameBoard section:nth-child(1) div:nth-child(17){
+.GameBoard section:nth-child(1) div:nth-child(17), .GameBoard section:nth-child(7) div:nth-child(10), .GameBoard section:nth-child(7) div:nth-child(19), .GameBoard section:nth-child(7) div:nth-child(29), .GameBoard section:nth-child(14) div:nth-child(8), .GameBoard section:nth-child(14) div:nth-child(19){
     border-right: var(--border);
     border-bottom: var(--border);
     border-radius: var(--downRight);
@@ -15,37 +15,39 @@
     border-bottom: var(--border);
 }
 /* upLeft */
-.GameBoard section:nth-child(2) div:nth-child(2){
+.GameBoard section:nth-child(2) div:nth-child(2), .GameBoard section:nth-child(20) div:nth-child(8), .GameBoard section:nth-child(20) div:nth-child(18), .GameBoard section:nth-child(2) div:nth-child(21), .GameBoard section:nth-child(12) div:nth-child(14), .GameBoard section:nth-child(13) div:nth-child(7), .GameBoard section:nth-child(12) div:nth-child(14){
     border-left: var(--border);
     border-top: var(--border);
     border-radius: var(--upLeft);
 }
-/* horizontal */
-.GameBoard section:nth-child(2) div:nth-child(3){
+/* vertical */
+.GameBoard section:nth-child(3) div:nth-child(2), .GameBoard section:nth-child(6) div:nth-child(10), .GameBoard section:nth-child(6) div:nth-child(21), .GameBoard section:nth-child(10) div:nth-child(2), .GameBoard section:nth-child(10) div:nth-child(7), .GameBoard section:nth-child(10) div:nth-child(10), .GameBoard section:nth-child(10) div:nth-child(12), .GameBoard section:nth-child(10) div:nth-child(19), .GameBoard section:nth-child(10) div:nth-child(27), .GameBoard section:nth-child(10) div:nth-child(29), .GameBoard section:nth-child(11) div:nth-child(29), .GameBoard section:nth-child(13) div:nth-child(5), .GameBoard section:nth-child(13) div:nth-child(25), .GameBoard section:nth-child(14) div:nth-child(12), .GameBoard section:nth-child(17) div:nth-child(4), .GameBoard section:nth-child(17) div:nth-child(21), .GameBoard section:nth-child(18) div:nth-child(12), .GameBoard section:nth-child(19) div:nth-child(2), .GameBoard section:nth-child(19) div:nth-child(27){
     border-left: var(--border);
     border-right: var(--border);
 }
-/* vertical */
-.GameBoard section:nth-child(3) div:nth-child(2){
+/* horizontal */
+.GameBoard section:nth-child(2) div:nth-child(3), .GameBoard section:nth-child(2) div:nth-child(25), .GameBoard section:nth-child(5) div:nth-child(n + 15):nth-child(-n + 16), .GameBoard section:nth-child(7) div:nth-child(9), .GameBoard section:nth-child(7) div:nth-child(25), .GameBoard section:nth-child(9) div:nth-child(22), .GameBoard section:nth-child(9) div:nth-child(26), .GameBoard section:nth-child(12) div:nth-child(n + 15):nth-child(-n + 16), .GameBoard section:nth-child(14) div:nth-child(n + 16):nth-child(-n + 18), .GameBoard section:nth-child(14) div:nth-child(22), .GameBoard section:nth-child(14) div:nth-child(28), .GameBoard section:nth-child(16) div:nth-child(7){
     border-top: var(--border);
     border-bottom: var(--border);
 }
 /* coverDown */
-.GameBoard section:nth-child(4) div:nth-child(2){
+.GameBoard section:nth-child(4) div:nth-child(2), .GameBoard section:nth-child(3) div:nth-child(10), .GameBoard section:nth-child(4) div:nth-child(12), .GameBoard section:nth-child(4) div:nth-child(19), .GameBoard section:nth-child(3) div:nth-child(21), .GameBoard section:nth-child(4) div:nth-child(29), .GameBoard section:nth-child(5) div:nth-child(4), .GameBoard section:nth-child(5) div:nth-child(6), .GameBoard section:nth-child(5) div:nth-child(8), .GameBoard section:nth-child(5) div:nth-child(23), .GameBoard section:nth-child(5) div:nth-child(25), .GameBoard section:nth-child(5) div:nth-child(27), .GameBoard section:nth-child(11) div:nth-child(10), .GameBoard section:nth-child(11) div:nth-child(12), .GameBoard section:nth-child(10) div:nth-child(5), .GameBoard section:nth-child(11) div:nth-child(19), .GameBoard section:nth-child(10) div:nth-child(23), .GameBoard section:nth-child(11) div:nth-child(27), .GameBoard section:nth-child(12) div:nth-child(29), .GameBoard section:nth-child(14) div:nth-child(3), .GameBoard section:nth-child(14) div:nth-child(5), .GameBoard section:nth-child(13) div:nth-child(14), .GameBoard section:nth-child(14) div:nth-child(25), .GameBoard section:nth-child(16) div:nth-child(10),.GameBoard section:nth-child(17) div:nth-child(23), .GameBoard section:nth-child(18) div:nth-child(4), .GameBoard section:nth-child(18) div:nth-child(14), .GameBoard section:nth-child(18) div:nth-child(21), .GameBoard section:nth-child(17) div:nth-child(23), .GameBoard section:nth-child(19) div:nth-child(12), .GameBoard section:nth-child(19) div:nth-child(16), .GameBoard section:nth-child(19) div:nth-child(29){
     border-bottom: var(--border);
     border-left: var(--border);
     border-right: var(--border);
     border-radius: var(--coverDown);
 }
 /* coverRight */
-.GameBoard section:nth-child(2) div:nth-child(4){
+.GameBoard section:nth-child(2) div:nth-child(4), .GameBoard section:nth-child(2) div:nth-child(7), .GameBoard section:nth-child(2) div:nth-child(22), .GameBoard section:nth-child(2) div:nth-child(26), .GameBoard section:nth-child(3) div:nth-child(13), .GameBoard section:nth-child(3) div:nth-child(16), .GameBoard section:nth-child(5) div:nth-child(17), .GameBoard section:nth-child(7) div:nth-child(3), .GameBoard section:nth-child(7) div:nth-child(6), .GameBoard section:nth-child(7) div:nth-child(13), .GameBoard section:nth-child(7) div:nth-child(16), .GameBoard section:nth-child(7) div:nth-child(22), .GameBoard section:nth-child(7) div:nth-child(26), .GameBoard section:nth-child(11) div:nth-child(3), .GameBoard section:nth-child(11) div:nth-child(8), .GameBoard section:nth-child(12) div:nth-child(17), .GameBoard section:nth-child(12) div:nth-child(22), .GameBoard section:nth-child(14) div:nth-child(23), .GameBoard section:nth-child(14) div:nth-child(29), .GameBoard section:nth-child(15) div:nth-child(14), .GameBoard section:nth-child(18) div:nth-child(7), .GameBoard section:nth-child(18) div:nth-child(10), .GameBoard section:nth-child(18) div:nth-child(19), .GameBoard section:nth-child(16) div:nth-child(19){
     border-top: var(--border);
     border-bottom: var(--border);
     border-right: var(--border);
+    border-radius: var(--coverRight);
 }
 /* coverUp */
-.GameBoard section:nth-child(4) div:nth-child(4){
+.GameBoard section:nth-child(4) div:nth-child(4), .GameBoard section:nth-child(4) div:nth-child(6), .GameBoard section:nth-child(4) div:nth-child(8), .GameBoard section:nth-child(4) div:nth-child(23), .GameBoard section:nth-child(4) div:nth-child(25), .GameBoard section:nth-child(4) div:nth-child(27), .GameBoard section:nth-child(2) div:nth-child(12), .GameBoard section:nth-child(2) div:nth-child(19), .GameBoard section:nth-child(5) div:nth-child(10), .GameBoard section:nth-child(5) div:nth-child(21), .GameBoard section:nth-child(6) div:nth-child(2), .GameBoard section:nth-child(6) div:nth-child(12), .GameBoard section:nth-child(6) div:nth-child(19), .GameBoard section:nth-child(6) div:nth-child(29), .GameBoard section:nth-child(9) div:nth-child(2), .GameBoard section:nth-child(9) div:nth-child(7), .GameBoard section:nth-child(9) div:nth-child(12), .GameBoard section:nth-child(9) div:nth-child(19), .GameBoard section:nth-child(9) div:nth-child(29), .GameBoard section:nth-child(11) div:nth-child(21), .GameBoard section:nth-child(11) div:nth-child(25), .GameBoard section:nth-child(12) div:nth-child(5), .GameBoard section:nth-child(13) div:nth-child(3), .GameBoard section:nth-child(13) div:nth-child(12), .GameBoard section:nth-child(13) div:nth-child(19), .GameBoard section:nth-child(13) div:nth-child(27), .GameBoard section:nth-child(15) div:nth-child(10), .GameBoard section:nth-child(16) div:nth-child(4), .GameBoard section:nth-child(16) div:nth-child(21), .GameBoard section:nth-child(16) div:nth-child(23), .GameBoard section:nth-child(17) div:nth-child(12), .GameBoard section:nth-child(17) div:nth-child(14), .GameBoard section:nth-child(18) div:nth-child(16), .GameBoard section:nth-child(16) div:nth-child(27), .GameBoard section:nth-child(20) div:nth-child(4), .GameBoard section:nth-child(20) div:nth-child(6), .GameBoard section:nth-child(20) div:nth-child(14), .GameBoard section:nth-child(20) div:nth-child(21), .GameBoard section:nth-child(20) div:nth-child(25), .GameBoard section:nth-child(18) div:nth-child(2){
     border-left: var(--border);
     border-right: var(--border);
     border-top: var(--border);
+    border-radius: var(--coverUp);
 }
