--- a/src/styles/designs/desktop.css
+++ b/src/styles/designs/desktop.css
@@ -5,7 +5,7 @@
     border-radius: var(--downLeft);
 }
 /* downRight */
-.GameBoard section:nth-child(1) div:nth-child(17), .GameBoard section:nth-child(7) div:nth-child(10), .GameBoard section:nth-child(7) div:nth-child(19), .GameBoard section:nth-child(7) div:nth-child(29), .GameBoard section:nth-child(14) div:nth-child(8), .GameBoard section:nth-child(14) div:nth-child(19){
+.GameBoard section:nth-child(1) div:nth-child(17), .GameBoard section:nth-child(7) div:nth-child(10), .GameBoard section:nth-child(7) div:nth-child(19), .GameBoard section:nth-child(7) div:nth-child(29), .GameBoard section:nth-child(14) div:nth-child(8), .GameBoard section:nth-child(14) div:nth-child(19), .GameBoard section:nth-child(14) div:nth-child(1){
     border-right: var(--border);
     border-bottom: var(--border);
     border-radius: var(--downRight);
@@ -14,19 +14,37 @@
 .GameBoard section:nth-child(1) div:nth-child(n + 14):nth-child(-n + 16){
     border-bottom: var(--border);
 }
+/* up */
+.GameBoard section:nth-child(20) div:nth-child(9){
+    border-top: var(--border);
+}
+/* left */
+.GameBoard section:nth-child(3) div:nth-child(12){
+    border-left: var(--border);
+}
+/* right */
+.GameBoard section:nth-child(3) div:nth-child(19), .GameBoard section:nth-child(12) div:nth-child(25){
+    border-right: var(--border);
+}
 /* upLeft */
 .GameBoard section:nth-child(2) div:nth-child(2), .GameBoard section:nth-child(20) div:nth-child(8), .GameBoard section:nth-child(20) div:nth-child(18), .GameBoard section:nth-child(2) div:nth-child(21), .GameBoard section:nth-child(12) div:nth-child(14), .GameBoard section:nth-child(13) div:nth-child(7), .GameBoard section:nth-child(12) div:nth-child(14){
     border-left: var(--border);
     border-top: var(--border);
     border-radius: var(--upLeft);
 }
+/* upRight */
+.GameBoard section:nth-child(2) div:nth-child(10), .GameBoard section:nth-child(2) div:nth-child(29), .GameBoard section:nth-child(9) div:nth-child(5), .GameBoard section:nth-child(9) div:nth-child(10), .GameBoard section:nth-child(9) div:nth-child(23), .GameBoard section:nth-child(9) div:nth-child(27), .GameBoard section:nth-child(13) div:nth-child(8), .GameBoard section:nth-child(20) div:nth-child(10), .GameBoard section:nth-child(20) div:nth-child(19), .GameBoard section:nth-child(13) div:nth-child(1){
+    border-top: var(--border);
+    border-right: var(--border);
+    border-radius: var(--upRight);
+}
 /* vertical */
-.GameBoard section:nth-child(3) div:nth-child(2), .GameBoard section:nth-child(6) div:nth-child(10), .GameBoard section:nth-child(6) div:nth-child(21), .GameBoard section:nth-child(10) div:nth-child(2), .GameBoard section:nth-child(10) div:nth-child(7), .GameBoard section:nth-child(10) div:nth-child(10), .GameBoard section:nth-child(10) div:nth-child(12), .GameBoard section:nth-child(10) div:nth-child(19), .GameBoard section:nth-child(10) div:nth-child(27), .GameBoard section:nth-child(10) div:nth-child(29), .GameBoard section:nth-child(11) div:nth-child(29), .GameBoard section:nth-child(13) div:nth-child(5), .GameBoard section:nth-child(13) div:nth-child(25), .GameBoard section:nth-child(14) div:nth-child(12), .GameBoard section:nth-child(17) div:nth-child(4), .GameBoard section:nth-child(17) div:nth-child(21), .GameBoard section:nth-child(18) div:nth-child(12), .GameBoard section:nth-child(19) div:nth-child(2), .GameBoard section:nth-child(19) div:nth-child(27){
+.GameBoard section:nth-child(3) div:nth-child(2), .GameBoard section:nth-child(3) div:nth-child(29), .GameBoard section:nth-child(6) div:nth-child(10), .GameBoard section:nth-child(6) div:nth-child(21), .GameBoard section:nth-child(10) div:nth-child(2), .GameBoard section:nth-child(10) div:nth-child(7), .GameBoard section:nth-child(10) div:nth-child(10), .GameBoard section:nth-child(10) div:nth-child(12), .GameBoard section:nth-child(10) div:nth-child(19), .GameBoard section:nth-child(10) div:nth-child(27), .GameBoard section:nth-child(10) div:nth-child(29), .GameBoard section:nth-child(11) div:nth-child(29), .GameBoard section:nth-child(13) div:nth-child(5), .GameBoard section:nth-child(13) div:nth-child(25), .GameBoard section:nth-child(14) div:nth-child(12), .GameBoard section:nth-child(17) div:nth-child(4), .GameBoard section:nth-child(17) div:nth-child(21), .GameBoard section:nth-child(18) div:nth-child(12), .GameBoard section:nth-child(19) div:nth-child(2), .GameBoard section:nth-child(19) div:nth-child(27), .GameBoard section:nth-child(20) div:nth-child(2), .GameBoard section:nth-child(20) div:nth-child(27){
     border-left: var(--border);
     border-right: var(--border);
 }
 /* horizontal */
-.GameBoard section:nth-child(2) div:nth-child(3), .GameBoard section:nth-child(2) div:nth-child(25), .GameBoard section:nth-child(5) div:nth-child(n + 15):nth-child(-n + 16), .GameBoard section:nth-child(7) div:nth-child(9), .GameBoard section:nth-child(7) div:nth-child(25), .GameBoard section:nth-child(9) div:nth-child(22), .GameBoard section:nth-child(9) div:nth-child(26), .GameBoard section:nth-child(12) div:nth-child(n + 15):nth-child(-n + 16), .GameBoard section:nth-child(14) div:nth-child(n + 16):nth-child(-n + 18), .GameBoard section:nth-child(14) div:nth-child(22), .GameBoard section:nth-child(14) div:nth-child(28), .GameBoard section:nth-child(16) div:nth-child(7){
+.GameBoard section:nth-child(2) div:nth-child(3), .GameBoard section:nth-child(2) div:nth-child(25), .GameBoard section:nth-child(5) div:nth-child(n + 15):nth-child(-n + 16), .GameBoard section:nth-child(7) div:nth-child(9), .GameBoard section:nth-child(7) div:nth-child(25), .GameBoard section:nth-child(9) div:nth-child(22), .GameBoard section:nth-child(9) div:nth-child(26), .GameBoard section:nth-child(12) div:nth-child(n + 15):nth-child(-n + 16), .GameBoard section:nth-child(14) div:nth-child(n + 16):nth-child(-n + 18), .GameBoard section:nth-child(14) div:nth-child(22), .GameBoard section:nth-child(14) div:nth-child(28), .GameBoard section:nth-child(15) div:nth-child(13), .GameBoard section:nth-child(16) div:nth-child(7){
     border-top: var(--border);
     border-bottom: var(--border);
 }
@@ -38,16 +56,55 @@
     border-radius: var(--coverDown);
 }
 /* coverRight */
-.GameBoard section:nth-child(2) div:nth-child(4), .GameBoard section:nth-child(2) div:nth-child(7), .GameBoard section:nth-child(2) div:nth-child(22), .GameBoard section:nth-child(2) div:nth-child(26), .GameBoard section:nth-child(3) div:nth-child(13), .GameBoard section:nth-child(3) div:nth-child(16), .GameBoard section:nth-child(5) div:nth-child(17), .GameBoard section:nth-child(7) div:nth-child(3), .GameBoard section:nth-child(7) div:nth-child(6), .GameBoard section:nth-child(7) div:nth-child(13), .GameBoard section:nth-child(7) div:nth-child(16), .GameBoard section:nth-child(7) div:nth-child(22), .GameBoard section:nth-child(7) div:nth-child(26), .GameBoard section:nth-child(11) div:nth-child(3), .GameBoard section:nth-child(11) div:nth-child(8), .GameBoard section:nth-child(12) div:nth-child(17), .GameBoard section:nth-child(12) div:nth-child(22), .GameBoard section:nth-child(14) div:nth-child(23), .GameBoard section:nth-child(14) div:nth-child(29), .GameBoard section:nth-child(15) div:nth-child(14), .GameBoard section:nth-child(18) div:nth-child(7), .GameBoard section:nth-child(18) div:nth-child(10), .GameBoard section:nth-child(18) div:nth-child(19), .GameBoard section:nth-child(16) div:nth-child(19){
+.GameBoard section:nth-child(2) div:nth-child(4), .GameBoard section:nth-child(2) div:nth-child(7), .GameBoard section:nth-child(2) div:nth-child(22), .GameBoard section:nth-child(2) div:nth-child(26), .GameBoard section:nth-child(3) div:nth-child(13), .GameBoard section:nth-child(3) div:nth-child(16), .GameBoard section:nth-child(5) div:nth-child(17), .GameBoard section:nth-child(7) div:nth-child(3), .GameBoard section:nth-child(7) div:nth-child(6), .GameBoard section:nth-child(7) div:nth-child(13), .GameBoard section:nth-child(7) div:nth-child(16), .GameBoard section:nth-child(7) div:nth-child(22), .GameBoard section:nth-child(7) div:nth-child(26), .GameBoard section:nth-child(11) div:nth-child(3), .GameBoard section:nth-child(11) div:nth-child(8), .GameBoard section:nth-child(12) div:nth-child(17), .GameBoard section:nth-child(12) div:nth-child(22), .GameBoard section:nth-child(14) div:nth-child(23), .GameBoard section:nth-child(14) div:nth-child(29), .GameBoard section:nth-child(15) div:nth-child(14), .GameBoard section:nth-child(16) div:nth-child(8), .GameBoard section:nth-child(18) div:nth-child(7), .GameBoard section:nth-child(18) div:nth-child(10), .GameBoard section:nth-child(18) div:nth-child(19), .GameBoard section:nth-child(16) div:nth-child(19){
     border-top: var(--border);
     border-bottom: var(--border);
     border-right: var(--border);
     border-radius: var(--coverRight);
 }
 /* coverUp */
-.GameBoard section:nth-child(4) div:nth-child(4), .GameBoard section:nth-child(4) div:nth-child(6), .GameBoard section:nth-child(4) div:nth-child(8), .GameBoard section:nth-child(4) div:nth-child(23), .GameBoard section:nth-child(4) div:nth-child(25), .GameBoard section:nth-child(4) div:nth-child(27), .GameBoard section:nth-child(2) div:nth-child(12), .GameBoard section:nth-child(2) div:nth-child(19), .GameBoard section:nth-child(5) div:nth-child(10), .GameBoard section:nth-child(5) div:nth-child(21), .GameBoard section:nth-child(6) div:nth-child(2), .GameBoard section:nth-child(6) div:nth-child(12), .GameBoard section:nth-child(6) div:nth-child(19), .GameBoard section:nth-child(6) div:nth-child(29), .GameBoard section:nth-child(9) div:nth-child(2), .GameBoard section:nth-child(9) div:nth-child(7), .GameBoard section:nth-child(9) div:nth-child(12), .GameBoard section:nth-child(9) div:nth-child(19), .GameBoard section:nth-child(9) div:nth-child(29), .GameBoard section:nth-child(11) div:nth-child(21), .GameBoard section:nth-child(11) div:nth-child(25), .GameBoard section:nth-child(12) div:nth-child(5), .GameBoard section:nth-child(13) div:nth-child(3), .GameBoard section:nth-child(13) div:nth-child(12), .GameBoard section:nth-child(13) div:nth-child(19), .GameBoard section:nth-child(13) div:nth-child(27), .GameBoard section:nth-child(15) div:nth-child(10), .GameBoard section:nth-child(16) div:nth-child(4), .GameBoard section:nth-child(16) div:nth-child(21), .GameBoard section:nth-child(16) div:nth-child(23), .GameBoard section:nth-child(17) div:nth-child(12), .GameBoard section:nth-child(17) div:nth-child(14), .GameBoard section:nth-child(18) div:nth-child(16), .GameBoard section:nth-child(16) div:nth-child(27), .GameBoard section:nth-child(20) div:nth-child(4), .GameBoard section:nth-child(20) div:nth-child(6), .GameBoard section:nth-child(20) div:nth-child(14), .GameBoard section:nth-child(20) div:nth-child(21), .GameBoard section:nth-child(20) div:nth-child(25), .GameBoard section:nth-child(18) div:nth-child(2){
+.GameBoard section:nth-child(4) div:nth-child(4), .GameBoard section:nth-child(4) div:nth-child(6), .GameBoard section:nth-child(4) div:nth-child(8), .GameBoard section:nth-child(4) div:nth-child(23), .GameBoard section:nth-child(4) div:nth-child(25), .GameBoard section:nth-child(4) div:nth-child(27), .GameBoard section:nth-child(2) div:nth-child(12), .GameBoard section:nth-child(2) div:nth-child(19), .GameBoard section:nth-child(5) div:nth-child(10), .GameBoard section:nth-child(5) div:nth-child(21), .GameBoard section:nth-child(6) div:nth-child(2), .GameBoard section:nth-child(6) div:nth-child(12), .GameBoard section:nth-child(6) div:nth-child(19), .GameBoard section:nth-child(6) div:nth-child(29), .GameBoard section:nth-child(9) div:nth-child(2), .GameBoard section:nth-child(9) div:nth-child(7), .GameBoard section:nth-child(9) div:nth-child(12), .GameBoard section:nth-child(9) div:nth-child(19), .GameBoard section:nth-child(9) div:nth-child(29), .GameBoard section:nth-child(11) div:nth-child(21), .GameBoard section:nth-child(11) div:nth-child(25), .GameBoard section:nth-child(12) div:nth-child(5), .GameBoard section:nth-child(13) div:nth-child(3), .GameBoard section:nth-child(13) div:nth-child(12), .GameBoard section:nth-child(13) div:nth-child(19), .GameBoard section:nth-child(13) div:nth-child(27), .GameBoard section:nth-child(15) div:nth-child(10), .GameBoard section:nth-child(16) div:nth-child(4), .GameBoard section:nth-child(16) div:nth-child(21), .GameBoard section:nth-child(16) div:nth-child(23), .GameBoard section:nth-child(17) div:nth-child(12), .GameBoard section:nth-child(17) div:nth-child(14), .GameBoard section:nth-child(18) div:nth-child(16), .GameBoard section:nth-child(18) div:nth-child(27), .GameBoard section:nth-child(18) div:nth-child(29), .GameBoard section:nth-child(20) div:nth-child(4), .GameBoard section:nth-child(20) div:nth-child(6), .GameBoard section:nth-child(20) div:nth-child(14), .GameBoard section:nth-child(20) div:nth-child(21), .GameBoard section:nth-child(20) div:nth-child(25), .GameBoard section:nth-child(18) div:nth-child(2){
     border-left: var(--border);
     border-right: var(--border);
     border-top: var(--border);
     border-radius: var(--coverUp);
+}
+/* coverLeft */
+.GameBoard section:nth-child(2) div:nth-child(6), .GameBoard section:nth-child(2) div:nth-child(9), .GameBoard section:nth-child(2) div:nth-child(24), .GameBoard section:nth-child(2) div:nth-child(28), .GameBoard section:nth-child(3) div:nth-child(15), .GameBoard section:nth-child(3) div:nth-child(18), .GameBoard section:nth-child(5) div:nth-child(14), .GameBoard section:nth-child(7) div:nth-child(5), .GameBoard section:nth-child(7) div:nth-child(8), .GameBoard section:nth-child(7) div:nth-child(15), .GameBoard section:nth-child(7) div:nth-child(18), .GameBoard section:nth-child(7) div:nth-child(24), .GameBoard section:nth-child(7) div:nth-child(28), .GameBoard section:nth-child(9) div:nth-child(4), .GameBoard section:nth-child(9) div:nth-child(9), .GameBoard section:nth-child(9) div:nth-child(21), .GameBoard section:nth-child(9) div:nth-child(25), .GameBoard section:nth-child(12) div:nth-child(24), .GameBoard section:nth-child(14) div:nth-child(16), .GameBoard section:nth-child(14) div:nth-child(21), .GameBoard section:nth-child(16) div:nth-child(6), .GameBoard section:nth-child(16) div:nth-child(18), .GameBoard section:nth-child(18) div:nth-child(6), .GameBoard section:nth-child(18) div:nth-child(9), .GameBoard section:nth-child(18) div:nth-child(18){
+    border-top: var(--border);
+    border-left: var(--border);
+    border-bottom: var(--border);
+    border-radius: var(--coverLeft);
+}
+/* square */
+.GameBoard section:nth-child(13) div:nth-child(10), .GameBoard section:nth-child(16) div:nth-child(2), .GameBoard section:nth-child(16) div:nth-child(16), .GameBoard section:nth-child(16) div:nth-child(25), .GameBoard section:nth-child(16) div:nth-child(27), .GameBoard section:nth-child(16) div:nth-child(29), .GameBoard section:nth-child(18) div:nth-child(25), .GameBoard section:nth-child(19) div:nth-child(23){
+    border: var(--border);
+    border-radius: var(--square);
+}
+/* Jail */
+.GameBoard section:nth-child(9) div:nth-child(14){
+    border-top: var(--borderJail);
+    border-left: var(--borderJail);
+    border-radius: var(--upLeft);
+}
+.GameBoard section:nth-child(10) div:nth-child(14){
+    border-left: var(--borderJail);
+    border-bottom: var(--borderJail);
+    border-radius: var(--downLeft);
+}
+.GameBoard section:nth-child(9) div:nth-child(17){
+    border-top: var(--borderJail);
+    border-right: var(--borderJail);
+    border-radius: var(--upRight);
+}
+.GameBoard section:nth-child(10) div:nth-child(17){
+    border-bottom: var(--borderJail);
+    border-right: var(--borderJail);
+    border-radius: var(--downRight);
+}
+.GameBoard section:nth-child(9) div:nth-child(n + 15):nth-child(-n + 16){
+    border-top: var(--borderJail);
+}
+.GameBoard section:nth-child(10) div:nth-child(n + 15):nth-child(-n + 16){
+    border-bottom: var(--borderJail);
 }
