--- a/src/styles/Playing.css
+++ b/src/styles/Playing.css
@@ -54,3 +54,8 @@
     justify-content: space-between;
     width: 100%;
 }
+.cell{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
