The timer was added (but without js)

--- a/src/styles/designs/320.css
+++ b/src/styles/designs/320.css
@@ -27,6 +27,9 @@
 .cell{
     width: 24px;
 }
+.Timer img{
+    width: 18px;
+}
 
 .GameBoard section:nth-child(10){
     border-left: 4px solid black;
