--- a/src/styles/Playing.css
+++ b/src/styles/Playing.css
@@ -60,3 +60,13 @@
     align-items: center;
     justify-content: center;
 }
+.Timer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 12%;
+    height: 100%;
+}
+.Timer img{
+    height: 100%;
+}
