--- a/src/styles/Playing.css
+++ b/src/styles/Playing.css
@@ -37,6 +37,7 @@
     border-radius: 0 0 15px 15px;
 }
 .GameStatus{
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -61,6 +62,9 @@
     justify-content: center;
 }
 .Timer{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     display: none;
     justify-content: space-between;
     align-items: center;
