Lifes are removed when pacman death

--- a/src/styles/Playing.css
+++ b/src/styles/Playing.css
@@ -45,7 +45,10 @@
 .LifeContainer{
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: flex-start;
+}
+.LifeContainer img{
+    margin-right: 9px;
 }
 .LevelStatus{
     color: white;
