--- a/src/styles/Playing.css
+++ b/src/styles/Playing.css
@@ -63,6 +63,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 .Timer{
     position: absolute;
