--- a/src/styles/Playing.css
+++ b/src/styles/Playing.css
@@ -16,6 +16,7 @@
     --upLeft: 5px 0 0 0;
 }
 .ContentPlaying{
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -80,4 +81,36 @@
 .Timer img{
     margin-right: 9px;
     height: 100%;
+}
+.ctaContainer{
+    position: absolute;
+    top: -5%;
+    left: 50%;
+    transform: translateX(-50%);
+    display: none;
+    width: 95vw;
+    height: 90vh;
+    border: 4px solid var(--borderColor);
+    border-radius: 15px;
+    background-color: rgba(255,255,255,0.6);
+    color: white;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.ctaContainer h2{
+    text-align: center;
+}
+.ctaAnimation{
+    width: 90%;
+    height: 20%;
+    margin: 20px 0;
+    border: 1px solid white;
+}
+.ctaButton{
+    width: 80%;
+    padding: 11px 0;
+    border: 2px solid var(--borderColor);
+    text-align: center;
+    border-radius: 15px;
 }
