--- a/src/styles/Playing.css
+++ b/src/styles/Playing.css
@@ -84,11 +84,12 @@
 }
 .ctaContainer{
     position: absolute;
-    top: -5%;
+    top: -2%;
     left: 50%;
     transform: translateX(-50%);
     display: none;
     width: 95vw;
+    max-width: 360px;
     height: 90vh;
     border: 4px solid var(--borderColor);
     border-radius: 15px;
@@ -109,8 +110,26 @@
 }
 .ctaButton{
     width: 80%;
+    max-width: 340px;
     padding: 11px 0;
     border: 2px solid var(--borderColor);
     text-align: center;
     border-radius: 15px;
+}
+
+@media screen and (min-width: 1210px){
+    .ctaContainer{
+        height: 100%;
+        width: 105%;
+        max-width: none;
+        top: 0;
+        left: 0;
+        right: -55%;
+    }
+    .ctaButton{
+        font-size: 1.5rem;
+    }
+    .ctaContainer h2{
+        font-size: 1.9rem;
+    }
 }
