The 'volume' icon was added to the boardgame in every layout. Left to do is give it interaction to the volume button and test the game to make it fun

--- a/src/styles/Playing.css
+++ b/src/styles/Playing.css
@@ -43,6 +43,18 @@
     align-items: center;
     justify-content: space-between;
 }
+.levelSoundStatus{
+    width: auto;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.sound-status{
+    height: 100%;
+    width: 22px;
+    margin-right: 10px;
+}
 .LifeContainer{
     display: flex;
     align-items: center;
@@ -130,5 +142,8 @@
     }
     .ctaContainer h2{
         font-size: 1.9rem;
+    }
+    .sound-status{
+        width: 42px;
     }
 }
