--- a/src/styles/Playing.css
+++ b/src/styles/Playing.css
@@ -103,7 +103,6 @@
     width: 93vw;
     max-width: 360px;
     height: 90vh;
-    border: 4px solid var(--borderColor);
     border-radius: 15px;
     background-color: rgba(0,0,0,0.9);
     color: white;
@@ -127,6 +126,10 @@
     text-align: center;
     border-radius: 15px;
     cursor: pointer;
+}
+.ctaButton a{
+    color: white;
+    text-decoration: none;
 }
 
 @media screen and (min-width: 1210px){
